# ferrosite

./: .gitignore  Cargo.toml  HOWTO-BUILD-EDIT-OPERATE-YOUR-SITE.md  LICENSE  README.md
.github/workflows/: static.yml
github-page/: .gitignore  ferrosite.toml
github-page/content/: feat-ship.md  feat-slots.md  feat-static.md  footer-about.md  header-action.md  home.md  link-docs.md  nav-docs.md  nav-home.md  stat-targets.md
github-page/content/projects/: ferrosite.md
github-page/templates/product/: theme.toml
plugins/contact-form/: component.js  manifest.toml  worker.js
src/: authoring.rs  error.rs  lib.rs  main.rs  url.rs
src/config/: mod.rs
src/content/: article.rs  frontmatter.rs  mod.rs  page.rs  slot.rs
src/deploy/: aws.rs  azure.rs  cloudflare.rs  mod.rs
src/pipeline/: build.rs  media.rs  mod.rs
src/plugin/: loaded.rs  manager.rs  manifest.rs  mod.rs  paths.rs  registry.rs
src/run/: mod.rs
src/template/: component.rs  engine.rs  mod.rs
ssr/: package.json  render.mjs
templates/: HOWTO-CREATE-A-TEMPLATE.md
templates/company/: ferrosite.toml  theme.toml
templates/company/assets/: main.css
templates/company/content/: about.md  contact-form.md  feat-ai.md  feat-platform.md  feat-strategy.md  footer-about.md  footer-bottom.md  footer-nav-company.md  footer-nav-services.md  header-action.md  header-brand.md  home.md  nav-about.md  nav-blog.md  nav-contact.md  nav-home.md  nav-projects.md  principle-clarity.md  principle-systems.md  stat-clients.md  (+8 more)
templates/developer/: ferrosite.toml  theme.toml
templates/product/: ferrosite.toml
(+70 files in other folders)
