[package]
name = "ferrosite"
version = "0.1.0"
edition = "2021"
description = "A railway-oriented static site generator for personal homepages"
license = "MIT"
repository = "https://github.com/MatthiasKainer/ferrosite"
homepage = "https://matthiaskainer.github.io/ferrosite/"
readme = "README.md"

[[bin]]
name = "ferrosite"
path = "src/main.rs"

[lib]
name = "ferrosite"
path = "src/lib.rs"

[dependencies]
serde        = { version = "=1.0.193", features = ["derive"] }
serde_json   = "=1.0.108"
toml         = "=0.8.2"
pulldown-cmark = "=0.9.6"
minijinja    = { version = "=1.0.16", features = ["loader", "json"] }
clap         = { version = "=4.4.18", features = ["derive", "env"] }
thiserror    = "=1.0.50"
chrono       = { version = "=0.4.31", features = ["serde"] }
walkdir      = "=2.4.0"
slug         = "=0.1.5"
fs_extra     = "=1.3.0"
once_cell    = "=1.18.0"
base64       = "=0.22.1"
tempfile     = "=3.8.1"
image        = { version = "=0.25.5", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
